--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
+<!-- index.html -->
 <!doctype html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Chat6GPT (test)</title>
-  <style>body{font-family:sans-serif;padding:10px}#log{height:55vh;overflow:auto;border:1px solid #ddd;padding:8px}.me{color:blue}.bot{color:green}#msg{width:calc(100% - 90px)}</style>
+  <meta charset="utf-8"/>
+  <title>myChat6Gpt</title>
+  <style>
+    body { font-family: Arial, sans-serif; background:#111; color:#eee; padding:20px; }
+    textarea { width:100%; height:120px; padding:10px; background:#222; color:#eee; border:1px solid #333; }
+    button { padding:10px 16px; margin-top:8px; }
+    #output { white-space:pre-wrap; background:#0f0f0f; padding:12px; margin-top:12px; border:1px solid #333; min-height:100px; }
+  </style>
 </head>
 <body>
-  <h3>Chat6GPT (test)</h3>
-  <div id="log"></div>
-  <input id="msg" placeholder="Type message..." />
-  <button id="send">Send</button>
+  <h2>myChat6Gpt — Web Chat</h2>
+  <textarea id="prompt" placeholder="Type your question here..."></textarea><br/>
+  <button id="sendBtn">Send</button>
+  <div id="status"></div>
+  <div id="output"></div>
 
-<script>
-const API = "RENDER_URL_HERE"; // replace after deploy e.g. https://mychat6gpt.onrender.com
-const log = document.getElementById('log');
-document.getElementById('send').onclick = async () => {
-  const m = document.getElementById('msg').value.trim();
-  if(!m) return;
-  append("You: " + m, "me");
-  append("Bot: ...", "bot-temp");
-  try {
-    const r = await fetch(API + "/chat", {
-      method:"POST",
-      headers: {"Content-Type":"application/json"},
-      body: JSON.stringify({message: m})
+  <script>
+    // Change this if your render backend URL is different
+    const apiUrl = "https://mychat6gpt.onrender.com/chat";
+
+    document.getElementById('sendBtn').addEventListener('click', async () => {
+      const prompt = document.getElementById('prompt').value.trim();
+      if (!prompt) return alert('Please enter a prompt.');
+
+      document.getElementById('status').innerText = 'Sending...';
+      document.getElementById('output').innerText = '';
+
+      try {
+        const res = await fetch(apiUrl, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ prompt })
+        });
+        const data = await res.json();
+        if (data.reply) {
+          document.getElementById('output').innerText = data.reply;
+        } else if (data.error) {
+          document.getElementById('output').innerText = "Error: " + data.error;
+        } else {
+          document.getElementById('output').innerText = JSON.stringify(data);
+        }
+      } catch (e) {
+        document.getElementById('output').innerText = 'Request failed: ' + e.message;
+      } finally {
+        document.getElementById('status').innerText = '';
+      }
     });
-    const j = await r.json();
-    document.querySelector('.bot-temp')?.remove();
-    append("Bot: " + (j.reply || j.error || "No response"), "bot");
-  } catch(e){
-    document.querySelector('.bot-temp')?.remove();
-    append("Bot: Error connecting", "bot");
-  }
-};
-
-function append(t, cls){
-  const d = document.createElement('div'); d.textContent = t; d.className = cls; log.appendChild(d); log.scrollTop = log.scrollHeight;
-}
-</script>
+  </script>
 </body>
 </html>
